test/valid/Logic/BinaryLogicalOperation.plume
/**
 * Abstract class representing a binary logical operation
 * @author 35237, Marcos Vasco
 */
abstract class BinaryLogicalOperation extends Object is
  
  abstract method calculate : (val1 : Boolean, val2 : Boolean) -> Boolean