test/invalid/AbstractMethodsCannotInstantiate/AbstractMethodsCannotInstantiate.plume
/**
 * @author 35237, Marcos Vasco
 */
abstract class AbstractMethodsCannotInstantiate extends Object is
  
  abstract method calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
  	true